# things

./: .gitignore  .gitmodules  README.md  conv-backward-profile.md  conv.ipynb  elementwise-and-linear.ipynb
2020Q1/: benchmark-addmv.ipynb  benchmark-unroll-with-discontig-input.ipynb  benchmark-unroll-with-dyn-casting.ipynb  benchmark-unroll.ipynb  benchmark-vec.ipynb  bernoulli-benchmark.ipynb  conv-benchmark.ipynb  disasm.py  disassembly-div-scalar.ipynb  disassembly-elementwise-new.ipynb  disassembly-elementwise-vec.ipynb  disassembly-elementwise.ipynb  disassembly-poisson.ipynb  fakequant-chan.ipynb  fakequant.ipynb  kldiv-back.ipynb  perf-div-scalar.ipynb  poisson-benchmark.ipynb  prelu-benchmark.ipynb  prelu_cuda_backward_kernel_share_weights.ipynb  resnet50-end2end-pr33073.ipynb  resnet50-end2end-pr33451.ipynb  resnet50.ipynb
2020Q2/: bernoulli-benchmark.ipynb  disasm.py  disassembly-reduction.ipynb  poisson-benchmark.ipynb  reduction-benchmark-blocksize.ipynb  reduction-benchmark-fp32.ipynb  reduction-benchmark-max_elem_per_t.ipynb  reduction-benchmark-refactor.ipynb  reduction-benchmark-vectorize-output.ipynb  reduction-benchmark-vectorize.ipynb  reduction-benchmark.ipynb  reduction-print-max_threads.ipynb  sum-splitup.ipynb
2020Q3/: jensen-gap.ipynb  masked_scatter-vs-multiply.ipynb  min-benchmark.ipynb  transformers-tf32.py  var-benchmark.ipynb
2020Q4/: .gitignore  TorchLib.cpp  TorchLib.cu  clip-norm.py  conv-benchmark.ipynb  gil.py  prune-cudnn.sh
2021Q1/: #randperm.lyx#  cat-benchmark.py  cfg.txt  kron.py  (+14 more)
2023/hello_world/: CMakeLists.txt  main.cpp
(+85 files in other folders)
